--- a/examples/demo/package.yaml
+++ b/examples/demo/package.yaml
@@ -1,108 +1,110 @@
 version: 1.0
+
 package:
   name: "demo"
   display_name: Functionality Demo
   summary: Provides functions that demo / test various available features
   language: "python"
-  functions:
-    - name: output_json
-      summary: Demonstrates JSON output rendering
-      display_name: Output JSON
-      description:
-        'Takes in a JSON blob and then simply returns that to demonstrate how
-        the JSON rendering works in the UI. To see table rendering, the input
-        should be a list formatted something like: [ { "param1": "value1",
-        "param2": "value2" }, { "param1": "value3", "param2": "value4" } ]'
-      parameters:
-        - name: input
-          summary: The JSON blob to render
-          type: json
-          required: true
-      return_type: json
-    - name: output_text
-      summary: Demonstrates text output rendering
-      display_name: Output Text
-      description:
-        Takes in a string and then simply returns that to demonstrate how string
-        results rendering works in the UI. CSV formatted text will provide the
-        option to be rendered as a table.
-      parameters:
-        - name: input
-          summary: The text to render
-          type: text
-          required: true
-      return_type: string
-    - name: long_running_process
-      display_name: Long Running Process
-      summary: Simulate a long running process
-      description:
-        Sleeps for the specified duration to simulate a long running process
-      parameters:
-        - name: duration
-          summary: How long, in seconds, that the function should run for
-          type: integer
-          required: false
-          default: 60
-    - name: variables
-      display_name: Display Variables
-      summary: Displays environment variables at runtime
-      description:
-        Displays all the environment variables that are available to the
-        function at runtime
-      variables:
-        - HOME
-        - USER
-      parameters: []
-    - name: num_chars
-      summary: Returns the number of characters in given file
-      display_name: Number of Characters
-      description: Returns the number of characters in given file
-      return_type: integer
-      parameters:
-        - name: file
-          display_name: File
-          summary: File to measure
-          description: Input file that will be measured
-          type: file
-          required: true
-        - name: other_param
-          display_name: Other Param
-          summary: Other param argument
-          description: Prints parameter
-          type: text
-          required: true
-    - name: parameter_types
-      summary: Test for parameter type form rendering and passthrough values
-      display_name: Parameter Types
-      description:
-        Function to test all of the supported parameter types. Intended to test
-        the UI form rendering for the different types, as well as what data
-        types and values get received by the underlying function.
-      parameters:
-        - name: boolean
-          type: boolean
-          required: False
-        - name: date
-          type: date
-          required: False
-        - name: datetime
-          type: datetime
-          required: False
-        - name: file
-          type: file
-          required: False
-        - name: float
-          type: float
-          required: False
-        - name: integer
-          type: integer
-          required: False
-        - name: json
-          type: json
-          required: False
-        - name: string
-          type: string
-          required: False
-        - name: text
-          type: text
-          required: False
+
+functions:
+  - name: output_json
+    summary: Demonstrates JSON output rendering
+    display_name: Output JSON
+    description:
+      'Takes in a JSON blob and then simply returns that to demonstrate how the
+      JSON rendering works in the UI. To see table rendering, the input should
+      be a list formatted something like: [ { "param1": "value1", "param2":
+      "value2" }, { "param1": "value3", "param2": "value4" } ]'
+    parameters:
+      - name: input
+        summary: The JSON blob to render
+        type: json
+        required: true
+    return_type: json
+  - name: output_text
+    summary: Demonstrates text output rendering
+    display_name: Output Text
+    description:
+      Takes in a string and then simply returns that to demonstrate how string
+      results rendering works in the UI. CSV formatted text will provide the
+      option to be rendered as a table.
+    parameters:
+      - name: input
+        summary: The text to render
+        type: text
+        required: true
+    return_type: string
+  - name: long_running_process
+    display_name: Long Running Process
+    summary: Simulate a long running process
+    description:
+      Sleeps for the specified duration to simulate a long running process
+    parameters:
+      - name: duration
+        summary: How long, in seconds, that the function should run for
+        type: integer
+        required: false
+        default: 60
+  - name: variables
+    display_name: Display Variables
+    summary: Displays environment variables at runtime
+    description:
+      Displays all the environment variables that are available to the function
+      at runtime
+    variables:
+      - HOME
+      - USER
+    parameters: []
+  - name: num_chars
+    summary: Returns the number of characters in given file
+    display_name: Number of Characters
+    description: Returns the number of characters in given file
+    return_type: integer
+    parameters:
+      - name: file
+        display_name: File
+        summary: File to measure
+        description: Input file that will be measured
+        type: file
+        required: true
+      - name: other_param
+        display_name: Other Param
+        summary: Other param argument
+        description: Prints parameter
+        type: text
+        required: true
+  - name: parameter_types
+    summary: Test for parameter type form rendering and passthrough values
+    display_name: Parameter Types
+    description:
+      Function to test all of the supported parameter types. Intended to test
+      the UI form rendering for the different types, as well as what data types
+      and values get received by the underlying function.
+    parameters:
+      - name: boolean
+        type: boolean
+        required: False
+      - name: date
+        type: date
+        required: False
+      - name: datetime
+        type: datetime
+        required: False
+      - name: file
+        type: file
+        required: False
+      - name: float
+        type: float
+        required: False
+      - name: integer
+        type: integer
+        required: False
+      - name: json
+        type: json
+        required: False
+      - name: string
+        type: string
+        required: False
+      - name: text
+        type: text
+        required: False
